--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
-
+<link rel="shortcut icon" href="http://www.iconj.com/ico/q/h/qhqb3qvdp9.ico" type="image/x-icon" />
 
 <!--[if lte IE 8]>
 
