--- a/index.html
+++ b/index.html
@@ -90,12 +90,21 @@
     <div class="splash">
     <div id="map"></div>
       <script>
-        var map = L.map('map').setView([51.077979,-114.130492], 16);
+        var southwest = L.latLng(51.0744081,-114.1399776),
+            northeast = L.latLng(51.0845110,-114.1146701),
+            bounds = L.latLngBounds(southwest,northeast);
+        var map = L.map('map',{
+          maxBounds: bounds
+        }).setView([51.077979,-114.130492], 16);
+      /*
+              maxBounds: bounds,
+              center: [51.077979,-114.130492]
+              zoom:16*/
 
         //load a tile layer
         L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
           {
-            maxZoom: 19,
+            maxZoom: 20,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
           }).addTo(map);
 
