--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <div class="splash">
     <div id="map"></div>
       <script>
-        var southwest = L.latLng(51.0744081,-114.1399776),
-            northeast = L.latLng(51.0845110,-114.1146701),
-            bounds = L.latLngBounds(southwest,northeast);
+        var southwest = L.latLng(51.0897800,-114.0940566),
+            northeast = L.latLng(51.0616021,-114.1829627),
+            bounds = L.latLngBounds(northeast,southwest);
         var map = L.map('map',{
           maxBounds: bounds
         }).setView([51.077979,-114.130492], 16);
