--- a/index.html
+++ b/index.html
@@ -96,15 +96,12 @@
         var map = L.map('map',{
           maxBounds: bounds
         }).setView([51.077979,-114.130492], 16);
-      /*
-              maxBounds: bounds,
-              center: [51.077979,-114.130492]
-              zoom:16*/
 
         //load a tile layer
         L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
           {
             maxZoom: 20,
+            minZoom: 16,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
           }).addTo(map);
 
