--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 
-//favicon
+
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="http://www.iconj.com/ico/5/l/5lp2jq0gpy.ico" type="image/x-icon" />
@@ -55,23 +55,37 @@
     <!-- custom stylesheet -->
     <!-- <link rel="stylesheet" href="/css/base.css"> -->
 
-    <script src="data1.js" > </script>
-    //get temperature data
+    <script src="data1.js" > 
+    //get temperature data </script>
     <script>
-    var temp=data1.result;
+    var temp=data1;
     </script>
 
-    <script src="data2.js" > </script>
-    //get download speed data
+    <script src="data2.js" > 
+    //get download speed data </script>
     <script>
-    var dn=data2.result;
+    var dn=data2;
     </script>
 
-    <script src="data3.js" > </script>
-    //get upload speed data
+    <script src="data3.js" > 
+    //get upload speed data </script>
     <script>
-    var up=data3.result;
+    var up=data3;
     </script>
+
+    <script src="data4.js" > 
+     //get noise level </script>
+    <script>
+    var nl=data4;
+    </script>
+
+    <script src="data5.js" > 
+    //get dust </script>
+    <script>
+    var dst=data5;
+    </script>
+
+    <script src="sort.js" > //sorting file </script> 
 </head>
 <body>
 
@@ -87,79 +101,83 @@
 
 
 <div class="splash-container">
-    <div class="splash">
+    <div class="splash1">
     <div id="map"></div>
       <script>
         var southwest = L.latLng(51.0897800,-114.0940566),
             northeast = L.latLng(51.0616021,-114.1829627),
             bounds = L.latLngBounds(northeast,southwest);
         var map = L.map('map',{
-          maxBounds: bounds
-        }).setView([51.077979,-114.130492], 16);
+          //maxBounds: bounds
+        }).setView([51.069,-114.1145], 16);
 
         //load a tile layer
         L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
           {
-            maxZoom: 20,
-            minZoom: 15,
+            maxZoom: 30,
+            minZoom: 16,
             attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
           }).addTo(map);
 
-        // Taylor Family Digital Library
-        var TFDL1marker = L.marker([51.077475, -114.129836]).addTo(map);
-        TFDL1marker.bindPopup("<b>TFDL 1st Floor</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: ").openPopup();
+        //locations are in sequential reference order 0-12 for Pis 1-13
 
-        // Taylor Family Digital Library
-        var TFDL3marker = L.marker([51.077580, -114.129963]).addTo(map);
-        TFDL3marker.bindPopup("<b>TFDL 3rd Floor</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: ").openPopup();
-
-        // Taylor Family Digital Library
-        var TFDL6marker = L.marker([51.077391, -114.129782]).addTo(map);
-        TFDL6marker.bindPopup("<b>TFDL 6th Floor</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: ").openPopup();
-
-        // Mac Hall
-        var MHmarker = L.marker([51.078474, -114.13089]).addTo(map);
-        MHmarker.bindPopup("<b>Mac Hall</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Engineering E Block: Geomatics Homeroom
+        // Pi #1: Engineering E Block: Geomatics Homeroom
         var Geomarker = L.marker([51.079777, -114.132488]).addTo(map);
-        Geomarker.bindPopup("<b>Geomatics Homeroom</b> <br>Download Speed: "+ String(dn)+ "<br>Upload Speed: "+ String(up)+ "<br>Temperature: "+ String(temp)+ "&deg;C <br>Noise Level: <br>").openPopup();
+        Geomarker.bindPopup("<b>Microlab</b> <br>Download Speed: "+ dn[0,0]+" Mbps"+ "<br>Upload Speed: "+ up[0][0]+" Mbps"+ "<br>Temperature: "+ temp[0][0] + "&deg;C <br>Noise Level: "+ nl[0][0]+ "<br>Dust: "+ dst[0][0]+" mg/m<sup>3</sup>").openPopup();
 
-        // ICT
-        var ICTmarker = L.marker([51.08017, -114.130302]).addTo(map);
-        ICTmarker.bindPopup("<b>ICT</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Kinesiology B
-        var KNBmarker = L.marker([51.077212, -114.132985]).addTo(map);
-        KNBmarker.bindPopup("<b>Kinesiology B</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Science Theatres
-        var STmarker = L.marker([51.079697, -114.126973]).addTo(map);
-        STmarker.bindPopup("<b>Science Theatres</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Education Block Lounge/Cafe
-        var EDUmarker = L.marker([51.076692, -114.126661]).addTo(map);
-        EDUmarker.bindPopup("<b>Education Block Lounge</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Engineering C Block: ENGG C Lounge
+         // Pi #2: Engineering C Block: ENGG C Lounge
         var ENCmarker = L.marker([51.080505, -114.132578]).addTo(map);
-        ENCmarker.bindPopup("<b>ENGG C Lounge</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
+        ENCmarker.bindPopup("<b>ENGG C Lounge</b> <br>Download Speed: "+ dn[1,0]+" Mbps"+ "<br>Upload Speed: "+ up[1][0]+" Mbps"+ "<br>Temperature: "+ temp[1][0] + "&deg;C <br>Noise Level: "+ nl[1][0]+ "<br>Dust: "+ dst[1][0]+" mg/m<sup>3</sup>").openPopup();
 
-        // CCIT: Steve's Office
+        // Pi #3: Taylor Family Digital Library
+        var TFDL1marker = L.marker([51.077475, -114.129836]).addTo(map);
+        TFDL1marker.bindPopup("<b>TFDL 1st Floor</b> <br>Download Speed: "+ dn[2,0]+" Mbps"+ "<br>Upload Speed: "+ up[2][0]+" Mbps"+ "<br>Temperature: "+ temp[2][0] + "&deg;C <br>Noise Level: "+ nl[2][0]+ "<br>Dust: "+ dst[2][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #4: Taylor Family Digital Library
+        var TFDL3marker = L.marker([51.077580, -114.129963]).addTo(map);
+        TFDL3marker.bindPopup("<b>TFDL 3rd Floor</b> <br>Download Speed: "+ dn[3,0]+" Mbps"+ "<br>Upload Speed: "+ up[3][0]+" Mbps"+ "<br>Temperature: "+ temp[3][0] + "&deg;C <br>Noise Level: "+ nl[3][0]+ "<br>Dust: "+ dst[3][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #5: Taylor Family Digital Library
+        var TFDL6marker = L.marker([51.077391, -114.129782]).addTo(map);
+        TFDL6marker.bindPopup("<b>TFDL 6th Floor</b> <br>Download Speed: "+ dn[4,0]+" Mbps"+ "<br>Upload Speed: "+ up[4][0]+" Mbps"+ "<br>Temperature: "+ temp[4][0] + "&deg;C <br>Noise Level: "+ nl[4][0]+ "<br>Dust: "+ dst[4][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #6: CCIT - Steve's Office
         var CCITmarker = L.marker([51.080566, -114.133694]).addTo(map);
-        CCITmarker.bindPopup("<b>CCIT: Steve's Office</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
+        CCITmarker.bindPopup("<b>CCIT: Steve's Office</b> <br>Download Speed: "+ dn[5,0]+" Mbps"+ "<br>Upload Speed: "+ up[5][0]+" Mbps"+ "<br>Temperature: "+ temp[5][0] + "&deg;C <br>Noise Level: "+ nl[5][0]+ "<br>Dust: "+ dst[5][0]+" mg/m<sup>3</sup>").openPopup();
 
-        // McKimmie Tower
+        // Pi #7: Education Block Lounge/Cafe
+        var EDUmarker = L.marker([51.076692, -114.126661]).addTo(map);
+        EDUmarker.bindPopup("<b>Education Block Lounge</b> <br>Download Speed: "+ dn[6][0]+" Mbps"+ "<br>Upload Speed: "+ up[6][0]+" Mbps"+ "<br>Temperature: "+ temp[6][0] + "&deg;C <br>Noise Level: "+ nl[6][0]+ "<br>Dust: "+ dst[6][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #8: McKimmie Tower
         var MKTmarker = L.marker([51.077457, -114.128858]).addTo(map);
-        MKTmarker.bindPopup("<b>McKimmie Tower</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
+        MKTmarker.bindPopup("<b>McKimmie Tower</b> <br>Download Speed: "+ dn[7,0]+" Mbps"+ "<br>Upload Speed: "+ up[7][0]+" Mbps"+ "<br>Temperature: "+ temp[7][0] + "&deg;C <br>Noise Level: "+ nl[7][0]+ "<br>Dust: "+ dst[7][0]+" mg/m<sup>3</sup>").openPopup();
 
-        // EEEL
-        var EEELmarker = L.marker([51.081039, -114.129636]).addTo(map);
-        EEELmarker.bindPopup("<b>EEEL</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
-
-        // Scurfield
+        // Pi #9: Scurfield
         var SCUmarker = L.marker([51.077385, -114.124836]).addTo(map);
-        SCUmarker.bindPopup("<b>Scurfield Hall</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
+        SCUmarker.bindPopup("<b>Scurfield Hall</b> <br>Download Speed: "+ dn[8,0]+" Mbps"+ "<br>Upload Speed: "+ up[8][0]+" Mbps"+ "<br>Temperature: "+ temp[8][0] + "&deg;C <br>Noise Level: "+ nl[8][0]+ "<br>Dust: "+ dst[8][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #10: Mac Hall
+        var MHmarker = L.marker([51.078474, -114.13089]).addTo(map);
+        MHmarker.bindPopup("<b>Mac Hall</b> <br>Download Speed: "+ dn[9,0]+" Mbps"+ "<br>Upload Speed: "+ up[9][0]+" Mbps"+ "<br>Temperature: "+ temp[9][0] + "&deg;C <br>Noise Level: "+ nl[9][0]+ "<br>Dust: "+ dst[9][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #11: Science Theatres
+        var STmarker = L.marker([51.079697, -114.126973]).addTo(map);
+        STmarker.bindPopup("<b>Science Theatres</b> <br>Download Speed: "+ dn[10,0]+" Mbps"+ "<br>Upload Speed: "+ up[10][0]+" Mbps"+ "<br>Temperature: "+ temp[10][0] + "&deg;C <br>Noise Level: "+ nl[10][0]+ "<br>Dust: "+ dst[10][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #12: ICT
+        var ICTmarker = L.marker([51.08017, -114.130302]).addTo(map);
+        ICTmarker.bindPopup("<b>ICT</b> <br>Download Speed: "+ dn[11,0]+" Mbps"+ "<br>Upload Speed: "+ up[11][0]+" Mbps"+ "<br>Temperature: "+ temp[11][0] + "&deg;C <br>Noise Level: "+ nl[11][0]+ "<br>Dust: "+ dst[11][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // Pi #13: Kinesiology B
+        var KNBmarker = L.marker([51.077212, -114.132985]).addTo(map);
+        KNBmarker.bindPopup("<b>Kinesiology B</b> <br>Download Speed: "+ dn[12,0]+" Mbps"+ "<br>Upload Speed: "+ up[12][0]+" Mbps"+ "<br>Temperature: "+ temp[12][0] + "&deg;C <br>Noise Level: "+ nl[12][0]+ "<br>Dust: "+ dst[12][0]+" mg/m<sup>3</sup>").openPopup();
+
+        // EEEL - in case we decide to put a pi here
+        //var EEELmarker = L.marker([51.081039, -114.129636]).addTo(map);
+        //EEELmarker.bindPopup("<b>EEEL</b> <br>Wi-Fi Speed: <br>Temperature: <br>Noise Level: <br>").openPopup();
+
+
 
       </script>
   </div>
@@ -178,7 +196,7 @@
                     Wi-Fi Speed
                 </h3>
                 <p>
-                    Having fast internet helps you get your studying done faster
+                    Having fast internet helps you get your studying done faster.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -196,7 +214,7 @@
                     Noise Level
                 </h3>
                 <p>
-                    Whether you like a quiet study space, or a more busy space with lots of action, this map can help!
+                    Whether you like a quiet study space, or a busier space with lots of action, using the interactive map can help.
                 </p>
             </div>
             <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -205,20 +223,25 @@
                     Optimal Space
                 </h3>
                 <p>
-                    Combine these three factors to find the best study space!
+                    Click on the different study areas to see which environment is right for you, so you can spend less time finding a space and more time hitting the books.
     </div>
 
     <div class="ribbon l-box-lrg pure-g">
+
         <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-            <img class="pure-img-responsive" alt="File Icons" width="300" src="img/common/grouppic.jpg">
+            <iframe width="448" height="252" src="https://www.youtube.com/embed/7R6Z9y7NJcE" frameborder="0" allowfullscreen></iframe>
         </div>
+
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
+            <div class="buffer"> 
+            <p> <br> </p>
+            </div>
 
-            <h2 class="content-head content-head-ribbon">Our Project:</h2>
-
+            <h2 class="content-head2 content-head-ribbon">Our Project:</h2>
             <p>
                 In the future, everything will be connected with sensors as an Internet of Things (IOT). IOT empowers citizens to innovate with the data collected around them by making the data easily accessible on the Internet. In this project, sensors are placed in various locations around the University of Calgary campus, and data is gathered to describe the different building environments. Focusing the data collection on Wi-Fi speed, temperature, and noise level allows users to effectively compare study spaces according to their preferences. As the data is collected in real-time, it is presented on a user-friendly website to allow students to make smart, quick decisions when selecting a study space
             </p>
+
         </div>
     </div>
 
