--- a/index.html
+++ b/index.html
@@ -30,7 +30,50 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
+    <script src="data1.js" >
+    //get temperature data </script>
+    <script>
+    var temp=data1;
+    </script>
 
+    <script src="data2.js" >//get download speed data </script>
+    <script>
+    var dn=data2;
+    </script>
+
+    <script src="data3.js" >//get upload speed data </script>
+    <script>
+    var up=data3;
+    </script>
+
+    <script src="data4.js" >//get noise level </script>
+    <script>
+    var nl=data4;
+    </script>
+
+    <script src="data5.js" >//get dust </script>
+
+
+    <script>
+    //sorting
+    var dst=data5;
+    </script>
+    <script>
+    function compareSecondColumn(a, b) {
+        if (a[1] === b[1]) {
+            return 0;
+        }
+        else {
+            return (a[1] < b[1]) ? -1 : 1;
+        }
+    }
+
+    temp.sort(compareSecondColumn);
+    dn.sort(compareSecondColumn);
+    up.sort(compareSecondColumn);
+    nl.sort(compareSecondColumn);
+    dst.sort(compareSecondColumn);
+    </script>
 
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/marketing-old-ie.css">
@@ -55,37 +98,8 @@
     <!-- custom stylesheet -->
     <!-- <link rel="stylesheet" href="/css/base.css"> -->
 
-    <script src="data1.js" > 
-    //get temperature data </script>
-    <script>
-    var temp=data1;
-    </script>
 
-    <script src="data2.js" > 
-    //get download speed data </script>
-    <script>
-    var dn=data2;
-    </script>
 
-    <script src="data3.js" > 
-    //get upload speed data </script>
-    <script>
-    var up=data3;
-    </script>
-
-    <script src="data4.js" > 
-     //get noise level </script>
-    <script>
-    var nl=data4;
-    </script>
-
-    <script src="data5.js" > 
-    //get dust </script>
-    <script>
-    var dst=data5;
-    </script>
-
-    <script src="sort.js" > //sorting file </script> 
 </head>
 <body>
 
@@ -116,7 +130,7 @@
           {
             maxZoom: 30,
             minZoom: 16,
-            attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+            //attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
           }).addTo(map);
 
         //locations are in sequential reference order 0-12 for Pis 1-13
@@ -233,7 +247,7 @@
         </div>
 
         <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
-            <div class="buffer"> 
+            <div class="buffer">
             <p> <br> </p>
             </div>
 
