--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     //sorting
     var dst=data5;
     </script>
-    <script>/*
+    <script>
     function compareSecondColumn(a, b) {
         if (a[1] === b[1]) {
             return 0;
@@ -72,7 +72,7 @@
     dn.sort(compareSecondColumn);
     up.sort(compareSecondColumn);
     nl.sort(compareSecondColumn);
-    dst.sort(compareSecondColumn);*/
+    dst.sort(compareSecondColumn);
     </script>
 
     <!--[if lte IE 8]>
