--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
         // Pi #7: Education Block Lounge/Cafe
         var EDUmarker = L.marker([51.076692, -114.126661]).addTo(map);
         EDUmarker.bindPopup("<b>Education Block Lounge</b> <br>Download Speed: "+ dn[3][0]+" Mbps"+ "<br>Upload Speed: "+ up[3][0]+" Mbps"+ "<br>Temperature: "+ temp[3][0] + "&deg;C <br>Noise Level: "+ nl[3][0]+ "<br>Dust: "+ dst[3][0]+" mg/m<sup>3</sup>").openPopup();
-
+/*
         // Pi #8: McKimmie Tower
         var MKTmarker = L.marker([51.077457, -114.128858]).addTo(map);
         MKTmarker.bindPopup("<b>McKimmie Tower</b> <br>Download Speed: "+ dn[4][0]+" Mbps"+ "<br>Upload Speed: "+ up[4][0]+" Mbps"+ "<br>Temperature: "+ temp[4][0] + "&deg;C <br>Noise Level: "+ nl[4][0]+ "<br>Dust: "+ dst[4][0]+" mg/m<sup>3</sup>").openPopup();
-
+*/
         // Pi #9: Scurfield: Does not exist
         //var SCUmarker = L.marker([51.077385, -114.124836]).addTo(map);
         //SCUmarker.bindPopup("<b>Scurfield Hall</b> <br>Download Speed: "+ dn[8][0]+" Mbps"+ "<br>Upload Speed: "+ up[8][0]+" Mbps"+ "<br>Temperature: "+ temp[8][0] + "&deg;C <br>Noise Level: "+ nl[8][0]+ "<br>Dust: "+ dst[8][0]+" mg/m<sup>3</sup>").openPopup();
@@ -171,7 +171,7 @@
 
         // Pi #13: Kinesiology B
         var KNBmarker = L.marker([51.077212, -114.132985]).addTo(map);
-        KNBmarker.bindPopup("<b>Kinesiology B</b> <br>Download Speed: 30"+ dn[10][0] +" Mbps"+ "<br>Upload Speed: "+ up[10][0]+" Mbps"+ "<br>Temperature: "+ temp[10][0] + "&deg;C <br>Noise Level: "+ nl[10][0]+ "<br>Dust: "+ dst[10][0]+" mg/m<sup>3</sup>").openPopup();
+        KNBmarker.bindPopup("<b>Kinesiology B</b> <br>Download Speed: "+ dn[10][0] +" Mbps"+ "<br>Upload Speed: "+ up[10][0]+" Mbps"+ "<br>Temperature: "+ temp[10][0] + "&deg;C <br>Noise Level: "+ nl[10][0]+ "<br>Dust: "+ dst[10][0]+" mg/m<sup>3</sup>").openPopup();
 
 
 
